--- a/Fitpeo/src/Components/Overview/Overview.module.css
+++ b/Fitpeo/src/Components/Overview/Overview.module.css
@@ -187,12 +187,13 @@
   justify-content: space-between;
   align-items: flex-start;
   gap: 8px;
-  gap: 14px;
   flex: 4;
+  margin: 10px 0;
+  height: calc(100% - 20px);
 }
 
 .overviewProfitFlexbox .profitInfo {
-  font-size: clamp(20px, 3vw, 42px);
+  font-size: clamp(24px, 3vw, 42px);
   color: var(--textStrongerColor);
   font-weight: 700;
   display: flex;
@@ -287,7 +288,7 @@
   }
 }
 
-@media (max-width: 720px) {
+@media (max-width: 768px) {
   .overview {
     gap: 20px;
   }
@@ -307,6 +308,7 @@
     align-items: flex-start;
     gap: 20px;
     flex: 1;
+    margin: 0;
   }
 
   .overviewProfitChart {
