--- a/Fitpeo/src/Components/SearchBar/SearchBar.module.css
+++ b/Fitpeo/src/Components/SearchBar/SearchBar.module.css
@@ -36,7 +36,7 @@
   margin: 6px;
 }
 
-@media (max-width: 720px) {
+@media (max-width: 768px) {
   .container input {
     font-size: 14px;
     padding: 2px 2px 4px 32px;
